...
          ) {
            Task { await viewModel.recordingManager.startRecording() }
          }
        }

        CustomButton(
          title: isRecording ? "Stop recording" : "Stop streaming",
          style: .destructive,
          isDisabled: false
        ) {
          Task {
            if isRecording {
              if await viewModel.recordingManager.stopRecording() != nil {
...
      }

      if !isRecording {
        CircleButton(icon: "camera.fill", text: nil) {
          viewModel.capturePhoto()
        }
        .accessibilityIdentifier("capture_photo_button")
      }
    }
  }
}

