...
            .resizable()
            .renderingMode(.template)
            .foregroundColor(.textPrimary)
            .aspectRatio(contentMode: .fit)
            .frame(width: 120)

          Text("Stream Your Glasses Camera")
            .font(.retraceFace(.semibold, size: 22))
            .foregroundColor(.textPrimary)

          Text("Tap the Start streaming button to stream video from your glasses or use the camera button to take a photo from your glasses.")
            .font(.retraceBody)
            .multilineTextAlignment(.center)
...
            .foregroundColor(.textTertiary)
        }
        .padding(.bottom, Spacing.lg)
        .opacity(viewModel.hasActiveDevice ? 0 : 1)

        CustomButton(
          title: "Start streaming",
          style: .primary,
          isDisabled: !viewModel.hasActiveDevice
        ) {
          Task {
            await viewModel.handleStartStreaming()
          }
...
